# ground-truth

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  alembic.ini  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 20260312_0001_initial.py
data/: fas_nuclear.json
data/sipri/: arms_transfers.csv  military_expenditure.csv
docs/: ANTIGRAVITY_HANDOFF_2026-03-11.md  APPROVED_SOURCES.md  Ground_Truth_Mindmap.html  SPRINT_1_HANDOFF_2026-03-12.md  SPRINT_2_HANDOFF_2026-03-12.md  SPRINT_3_HANDOFF_2026-03-13.md  SPRINT_5_HANDOFF_2026-03-14.md
docs/handoffs/: ANTIGRAVITY_QA_SPRINT2_2026-03-13.md  SPRINT_1_BACKBRIEF_2026-03-12.md  SPRINT_1_BACKBRIEF_2026-03-12_TASKS_1_4.md  SPRINT_2_BACKBRIEF_2026-03-13.md  SPRINT_3_BACKBRIEF_2026-03-13.md  SPRINT_4_BACKBRIEF_2026-03-14.md  SPRINT_4_HANDOFF_2026-03-13.md  SPRINT_5_BACKBRIEF_2026-03-14.md  SPRINT_5_HANDOFF_2026-03-14.md
docs/templates/: verification_report.md
groundtruth/: __init__.py  models.py
groundtruth/api/: __init__.py  auth.py  main.py  query_parser.py
groundtruth/frontend/: __init__.py  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts  vite.widget.config.ts
groundtruth/ingestion/: __init__.py  acled.py  cia_factbook.py  fas.py  gdelt.py  persist.py  sipri.py  worldbank.py
groundtruth/synthesis/: __init__.py  engine.py
groundtruth/verification/: __init__.py  bias_detector.py  fact_checker.py  pipeline.py  source_validator.py
scripts/: download_sipri.py  seed_data.py
tests/: test_api.py  test_auth.py  test_models.py
tests/ingestion/: test_acled.py  test_cia_factbook.py  test_fas.py  test_gdelt.py  test_sipri.py  test_worldbank.py
tests/synthesis/: test_engine.py
tests/verification/: test_bias_detector.py  test_fact_checker.py  test_source_validator.py
(+17 files in other folders)
